# aws-ec2-instance-connect-cli

./: .coveragerc  .gitignore  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.rst  pytest.ini  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
doc/: Makefile  README.rst
doc/source/: README.rst  conf.py  index.rst
ec2instanceconnectcli/: EC2InstanceConnectCLI.py  EC2InstanceConnectCommand.py  EC2InstanceConnectKey.py  EC2InstanceConnectLogger.py  EC2InstanceConnectSSHConfig.py  __init__.py  ec2_util.py  input_parser.py  key_publisher.py  key_utils.py  mops.py  mputty.py  py2py3.py
tests/: test_EC2ConnectCLI.py  test_ec2_util.py  test_input_parser.py  test_key_publisher.py  test_key_utils.py
tests/configuration/: config  credentials
tests/testloader/: test_base.py
