[bdist_wheel]

[metadata]
requires-dist=
    cryptography>=39.0.1
    botocore>=1.12.179

[tool:pytest]
# Test args for pytest; enable coverage for ec2instanceconnectcli, emit XML, HTML, and terminal reports.
addopts =
    --verbose
    --cov ec2instanceconnectcli
    --cov-report term-missing
    --cov-report xml
    --cov-report html
    tests
